# OceanStudio

./: README.md
Bert-Emotion-Classification/: demo.ipynb
Bert-Emotion-Classification/logs/2026-04-08_00-41-30/: events.out.tfevents.1775580090.LAPTOP-JQJFG3BT.6896.0
Bert-Emotion-Classification/logs/2026-04-08_00-44-39/: events.out.tfevents.1775580279.LAPTOP-JQJFG3BT.11584.0
Bert-Emotion-Classification/logs/2026-04-08_00-45-40/: events.out.tfevents.1775580340.LAPTOP-JQJFG3BT.14944.0
Bert-Emotion-Classification/logs/2026-04-08_00-49-15/: events.out.tfevents.1775580555.LAPTOP-JQJFG3BT.21772.0
Bert-Emotion-Classification/logs/2026-04-08_00-50-10/: events.out.tfevents.1775580610.LAPTOP-JQJFG3BT.16600.0
Bert-Emotion-Classification/logs/2026-04-08_00-51-57/: events.out.tfevents.1775580717.LAPTOP-JQJFG3BT.12300.0
Bert-Emotion-Classification/logs/2026-04-08_00-53-20/: events.out.tfevents.1775580800.LAPTOP-JQJFG3BT.20796.0
Bert-Emotion-Classification/logs/2026-04-08_10-46-21/: events.out.tfevents.1775616381.DESKTOP-GQOM8NT.7484.0
Bert-Emotion-Classification/models/: vocab.txt
Bert-Emotion-Classification/src/: config.py  dataset.py  evaluate.py  model.py  predict.py  process.py  tokenizer.py  train.py
RAG-CustomerService/: app_file_uploader.py  app_qa.py  config.py  file_history_store.py  knowledge_base.py  pyproject.toml  rag.py  vector_stores.py
RAG-CustomerService/chat_history/: user_001
RAG-CustomerService/chroma_db/: chroma.sqlite3
SmartHome-Care-Agent/algorithm/: 代码说明文档.md
SmartHome-Care-Agent/algorithm/源代码/: board_monitor.py  dashboard.py  main.py  (+2 more)
(+12 files in other folders)
